@@ -18,7 +18,10 @@ importFrom(cowplot,draw_label)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,theme_bw)
 importFrom(glpgStyle,glpgPaletteCharts)
 importFrom(haven,read_sas)
 importFrom(knitr,knit)
